--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,20 @@ classifier = [
   "Topic :: Office/Business"
 ]
 
+[tool.black]
+line-length = 88
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | dist
+  | django_erp/migrations
+)/
+'''
+
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.1.0"
@@ -30,6 +44,11 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
+flake8 = "^3.8.2"
+flake8-bugbear = "^20.1.4"
+black = "^19.10b0"
+isort = "^4.3.21"
+pre-commit = "^2.4.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
