--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ version_files = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+django = "^3.0.6"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
