--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ version_files = [
 python = "^3.8"
 django = "^3.0.6"
 django-polymorphic = "^2.1.2"
+pydash = "^4.7.6"
+django-localflavor = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
