--- a/.gitignore
+++ b/.gitignore
@@ -128,7 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# Progetto
+# Database sqlite
+db.sqlite3
+db.sqlite3-journal
 minigest.sqlite3
 minigest.sqlite3-journal
-static/
+
+# Public
+!./public/.gitkeep
