build(isort): aggiunge le sezioni

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -4,3 +4,7 @@ multi-line-output = 3
 include-trailing-comma = true
 force-grid-wrap = 0
 use-parentheses = true
+known-third-party=django,localflavor,pydash
+known-first-party=minigest
+forced_separate=django.contrib,django.utils
+sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
