--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,10 +1,12 @@
 [settings]
-line-length = 88
-multi-line-output = 3
-include-trailing-comma = true
-force-grid-wrap = 0
-use-parentheses = true
-known-third-party=django,localflavor,pydash
-known-first-party=minigest
+line-length=88
+multi-line-output=3
+include-trailing-comma=true
+force-grid-wrap=0
+use-parentheses=true
+known_third_party=django,localflavor,polymorphic,pydash
+known-first-party=minigest,minigest.common,minigest.fisco
+default_section=minigest
 forced_separate=django.contrib,django.utils
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+reverse_relative=true
