test(isort): testa la nuova configurazione

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,4 +1,5 @@
 [settings]
+virtual_env=.venv
 line-length=88
 multi-line-output=3
 include-trailing-comma=true
@@ -6,7 +7,7 @@ force-grid-wrap=0
 use-parentheses=true
 known_third_party=django,localflavor,polymorphic,pydash
 known-first-party=minigest,minigest.common,minigest.fisco
-default_section=minigest
+default_section=THIRDPARTY
 forced_separate=django.contrib,django.utils
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 reverse_relative=true
