--- a/.isort.cfg
+++ b/.isort.cfg
@@ -11,3 +11,5 @@ default_section=THIRDPARTY
 forced_separate=django.contrib,django.utils
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 reverse_relative=true
+order_by_type=false
+force_sort_within_sections=true
