test(isort): testa ancora isort

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -6,7 +6,7 @@ include-trailing-comma=true
 force-grid-wrap=0
 use-parentheses=true
 known_third_party=django,localflavor,polymorphic,pydash
-known-first-party=minigest,minigest.common,minigest.fisco
+known-first-party=minigest,common,fisco
 default_section=THIRDPARTY
 forced_separate=django.contrib,django.utils
 sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
