--- a/.isort.cfg
+++ b/.isort.cfg
@@ -5,11 +5,12 @@ multi-line-output=3
 include-trailing-comma=true
 force-grid-wrap=0
 use-parentheses=true
-known_third_party=django,localflavor,polymorphic,pydash
-known-first-party=minigest,common,fisco
-default_section=THIRDPARTY
+known_django=django
+known_third_party=localflavor,polymorphic,pydash
+known-first-party=minigest
 forced_separate=django.contrib,django.utils
-sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+no_lines_before=LOCALFOLDER
 reverse_relative=true
 order_by_type=false
 force_sort_within_sections=true
