--- a/.isort.cfg
+++ b/.isort.cfg
@@ -8,7 +8,7 @@ use-parentheses=true
 known_django=django
 known_third_party=localflavor,polymorphic,pydash
 known-first-party=minigest
-forced_separate=django.contrib,django.utils
+forced_separate=django.core,django.contrib,django.db,django.utils
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 no_lines_before=LOCALFOLDER
 reverse_relative=true
