build(sphinx): installa sphinx

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,9 @@
   "python.sortImports.path": ".venv/bin/isort",
   "python.pythonPath": ".venv/bin/python",
   "python.formatting.provider": "black",
-  "python.linting.flake8Args": ["--exclude .git,__pycache__,.venv"]
+  "python.linting.flake8Args": [
+    "--exclude .git,__pycache__,.venv"
+  ],
+  "autoDocstring.docstringFormat": "sphinx",
+  "autoDocstring.startOnNewLine": true
 }
