--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,8 @@
     "kevinglasson.cornflakes-linter",
     "freakypie.code-python-isort",
     "batisteo.vscode-django",
-    "bibhasdn.django-html"
+    "bibhasdn.django-html",
+    "lextudio.restructuredtext",
+    "njpwerner.autodocstring"
   ]
 }
