--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ version = "0.7.0"
 tag_format = "$major.$minor.$patch$prerelease"
 bump_message = "release $current_version → $new_version"
 version_files = [
-    "pyproject.toml:version"
+    "pyproject.toml:version",
+    "docs/source/conf.py:release"
 ]
 
 [tool.poetry.dependencies]
@@ -53,6 +54,8 @@ flake8-bugbear = "^20.1.4"
 black = "^19.10b0"
 isort = "^4.3.21"
 pre-commit = "^2.4.0"
+sphinx = "^3.0.3"
+sphinx-rtd-theme = "^0.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
