--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ tag_format = "$major.$minor.$patch$prerelease"
 bump_message = "release $current_version → $new_version"
 version_files = [
     "pyproject.toml:version",
-    "docs/source/conf.py:release"
+    "docs/conf.py:release"
 ]
 
 [tool.poetry.dependencies]
