docs(fix): aggiusta master_doc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
     "--exclude .git,__pycache__,.venv"
   ],
   "autoDocstring.docstringFormat": "sphinx",
-  "autoDocstring.startOnNewLine": true
+  "autoDocstring.startOnNewLine": true,
+  "restructuredtext.confPath": "${workspaceFolder}/docs"
 }
