docs(anagrafica): aggiunge la documentazione dei modelli dell'app anagrafica

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,6 @@
   ],
   "autoDocstring.docstringFormat": "sphinx",
   "autoDocstring.startOnNewLine": true,
-  "restructuredtext.confPath": "${workspaceFolder}/docs"
+  "restructuredtext.confPath": "${workspaceFolder}/docs",
+  "editor.wordWrap": "bounded"
 }
