--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ django = "^3.0.6"
 django-polymorphic = "^2.1.2"
 pydash = "^4.7.6"
 django-localflavor = "^3.0.1"
+djangorestframework = "^3.11.0"
+markdown = "^3.2.2"
+django-filter = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
