--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ django-localflavor = "^3.0.1"
 djangorestframework = "^3.11.0"
 markdown = "^3.2.2"
 django-filter = "^2.2.0"
+django-rest-polymorphic = "^0.1.9"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
