--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ djangorestframework = "^3.11.0"
 markdown = "^3.2.2"
 django-filter = "^2.2.0"
 django-rest-polymorphic = "^0.1.9"
+drf-nested-routers = "^0.91"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
