--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ markdown = "^3.2.2"
 django-filter = "^2.2.0"
 django-rest-polymorphic = "^0.1.9"
 drf-nested-routers = "^0.91"
+django-weasyprint = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
