--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ django-filter = "^2.2.0"
 django-rest-polymorphic = "^0.1.9"
 drf-nested-routers = "^0.91"
 django-weasyprint = "^1.0.1"
+psycopg2-binary = "^2.8.5"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
