--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": ["packages/**", "webclient"],
+  "workspaces": [
+    "packages/**",
+    "webclient"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
   "devDependencies": {
-    "lerna": "^3.22.0"
+    "husky": "^4.2.5",
+    "lerna": "^3.22.0",
+    "prettier": "2.0.5",
+    "pretty-quick": "^2.0.1"
   }
 }
