build(vscode): aggiunge prettier e babel

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,8 @@
     "batisteo.vscode-django",
     "bibhasdn.django-html",
     "lextudio.restructuredtext",
-    "njpwerner.autodocstring"
+    "njpwerner.autodocstring",
+    "esbenp.prettier-vscode",
+    "mgmcdermott.vscode-language-babel"
   ]
 }
