--- a/webclient/package.json
+++ b/webclient/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-react": "^7.20.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "prettier": "2.0.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
