--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ django-rest-polymorphic = "^0.1.9"
 drf-nested-routers = "^0.91"
 django-weasyprint = "^1.0.1"
 psycopg2-binary = "^2.8.5"
+django-cors-headers = "^3.3.0"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
