test: testa il build di react

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "packages/**",
     "webclient"
   ],
+  "scripts": {
+    "build": "yarn workspace webclient build"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged",
