--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ drf-nested-routers = "^0.91"
 django-weasyprint = "^1.0.1"
 psycopg2-binary = "^2.8.5"
 django-cors-headers = "^3.3.0"
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
