--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,9 +54,10 @@ django-filter = "^2.2.0"
 django-rest-polymorphic = "^0.1.9"
 drf-nested-routers = "^0.91"
 django-weasyprint = "^1.0.1"
-psycopg2-binary = "^2.8.5"
 django-cors-headers = "^3.3.0"
 gunicorn = "^20.0.4"
+psycopg2-binary = "^2.8.5"
+django-split-settings = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.22.0"
