--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,9 +15,7 @@ services:
     build: .
     ports:
       - 8000:8000
-    environment:
-      - DJANGO_SETTINGS_MODULE=minigest.settings.docker
-      - NODE_ENV=production
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/var/www/minigest
       - public:/var/www/minigest/public
