--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "export": "poetry export -f requirements.txt > requirements.txt",
     "build:webclient": "yarn workspace webclient build",
-    "build:docker": "sudo docker-compose build",
-    "docker:sh": "sudo docker run -it minigest_app sh",
-    "docker:compose": "sudo docker-compose up -d --build"
+    "build:docker": "sudo docker build . minigest"
   },
   "husky": {
     "hooks": {
