--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "export": "poetry export -f requirements.txt > requirements.txt",
     "build:webclient": "yarn workspace webclient build",
-    "build:docker": "sudo docker build . minigest"
+    "build:docker": "sudo docker build . minigest",
+    "docker:compose": "sudo docker-compose up -d --build"
   },
   "husky": {
     "hooks": {
