--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,6 +10,7 @@ jobs:
     name: Build and Publish
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Pubblica su Docker HUB
         uses: docker/build-push-action@v1
         with:
@@ -18,7 +19,3 @@ jobs:
           repository: dcdeiv/minigest
           tag_with_ref: true
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
-        
-    
-     
-  
