--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "export": "poetry export -f requirements.txt > requirements.txt",
     "build:webclient": "yarn workspace webclient build",
     "build:docker": "sudo docker build . minigest",
-    "docker:compose": "sudo docker-compose up -d --build"
+    "docker:compose": "sudo docker-compose up -d --build",
+    "bump": "cz bump --changelog"
   },
   "husky": {
     "hooks": {
