fix(docker): aggiusta la configurazione di docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,11 @@
 *
+!configs/
 !minigest/
 !pdf/
 !public/
 !rest/
 !webclient/
 !Dockerfile
-.docker-compose.yaml
+!.docker-compose.yaml
 !requirements.txt
 !manage.py
