--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,17 @@
 version: "3.8"
 
 services:
-  db:
-    image: postgres:12-alpine
-    restart: always
-    volumes:
-      - db_volume:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=test
-      - POSTGRES_USER=test
-      - POSTGRES_PASSWORD=test
-
   app:
     build: .
+    image: dcdeiv/minigest
+    network_mode: host
     ports:
       - 8000:8000
+    env_file: ./configs/.env.docker
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/var/www/minigest
       - public:/var/www/minigest/public
-    depends_on:
-      - db
 
 volumes:
-  db_volume:
   public:
