fix: elimina homepage e aggiusta port in start

--- a/webclient/package.json
+++ b/webclient/package.json
@@ -2,9 +2,8 @@
   "name": "webclient",
   "version": "0.10.0",
   "private": true,
-  "homepage": "/static/webclient",
   "scripts": {
-    "start": "craco start",
+    "start": "PORT=9000 craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
