--- a/webclient/package.json
+++ b/webclient/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "@craco/craco": "^5.6.4",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
