--- a/webclient/package.json
+++ b/webclient/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "PORT=9000 craco start",
-    "build": "craco build",
+    "build": "PUBLIC_URL=/static/webclient craco build",
     "test": "craco test",
     "eject": "craco eject"
   },
