--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "webclient"
   ],
   "scripts": {
+    "runserver": "poetry run python manage.py runserver",
+    "bump": "cz bump --changelog",
     "export": "poetry export -f requirements.txt > requirements.txt",
+    "makemigrations": "poetry run python manage.py makemigrations",
     "build:webclient": "yarn workspace webclient build",
-    "build:docker": "sudo docker build -t minigest:latest .",
-    "docker:compose": "sudo docker-compose up -d --build",
-    "bump": "cz bump --changelog"
+    "collectclient": "poetry run collectclient",
+    "collectstatic": "poetry run python manage.py collectstatic --no-input",
+    "build:step-1": "yarn run export && yarn run makemigrations",
+    "build:step-2": "yarn run build:webclient && yarn run collectclient",
+    "build": "yarn run build:step-1 && yarn run build:step-2",
+    "build:dev": "yarn run build && yarn run collectstatic",
+    "docker:build": "sudo docker build -t dcdeiv/minigest:latest .",
+    "docker:compose": "sudo docker-compose up -d",
+    "docker:compose:build": "sudo docker-compose up -d --build"
   },
   "husky": {
     "hooks": {
