--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:step-1": "yarn run export && yarn run makemigrations",
     "build:step-2": "yarn run build:webclient && yarn run collectclient",
     "build": "yarn run build:step-1 && yarn run build:step-2",
+    "build:push": "yarn build && git add -A && git commit -m 'build: build automatica' && git push",
     "build:dev": "yarn run build && yarn run collectstatic",
     "docker:build": "sudo docker build -t dcdeiv/minigest:latest .",
     "docker:compose": "sudo docker-compose up -d",
