fix: aggiunge public che prima veniva ignorato
BREAKING CHANGE:

--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,7 @@ env.bak/
 venv.bak/
 
 # Public
-public/
-!public/.gitkeep
-!packages/**/public/
+public/static/
 
 # node dependencies
 node_modules/
