--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,6 @@ tag_format = "$major.$minor.$patch$prerelease"
 bump_message = "docs:(release) $current_version → $new_version"
 version_files = [
     "pyproject.toml:version",
-    "docs/conf.py:release",
-    "lerna.json:version",
-    "packages/www/package.json:version"
 ]
 
 [tool.black]
@@ -61,6 +58,7 @@ force_sort_within_sections = true
 
 [tool.poetry.dependencies]
 python = "^3.8"
+django = "^3.0.7"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.23.0"
