--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,7 @@ name = "cz_conventional_commits"
 version = "0.15.1"
 tag_format = "$major.$minor.$patch$prerelease"
 bump_message = "docs:(release) $current_version → $new_version"
-version_files = [
-    "pyproject.toml:version",
-]
+version_files = ["pyproject.toml:version"]
 
 [tool.black]
 line-length = 88
@@ -38,23 +36,6 @@ exclude = '''
   | minigest/migrations
 )/
 '''
-
-[tool.isort]
-virtual_env = ".venv"
-line-length = 88
-multi-line-output = 3
-include-trailing-comma = true
-force-grid-wrap = 0
-use-parentheses = true
-known_django = "django"
-known_third_party = "localflavor,polymorphic,pydash"
-known-first-party = "minigest"
-forced_separate = "django.core,django.contrib,django.db,django.utils"
-sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
-no_lines_before = "LOCALFOLDER"
-reverse_relative = true
-order_by_type = false
-force_sort_within_sections = true
 
 [tool.poetry.dependencies]
 python = "^3.8"
