--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,20 @@
 # Python
 .venv/
-__pycache__/
+**/__pycache__
 
 # Node
-node_modules
+**/node_modules
+
+# Packages
+packages/**/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
