--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "workspaces": [
     "packages/**"
   ],
+  "scripts": {
+    "commit": "cz c",
+    "changelog": "cz changelog",
+    "release": "cz bump --changelog && git push",
+    "build": "yarn lerna exec yarn build"
+  },
   "devDependencies": {
     "lerna": "^3.22.1",
     "prettier": "2.0.5"
