--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ black = "^19.10b0"
 flake8 = "^3.8.3"
 flake8-bugbear = "^20.1.4"
 isort = { extras = ["pyproject"], version = "^4.3.21" }
+pyclean = "^1.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
