build(vscode): aggiunge nuove estensioni per javascript e docker

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,5 +6,9 @@
     "bodil.prettier-toml",
     "ms-python.python",
     "kevinglasson.cornflakes-linter",
+    "esbenp.prettier-vscode",
+    "mgmcdermott.vscode-language-babel",
+    "marquesmps.dockerfile-validator",
+    "ms-azuretools.vscode-docker"
   ]
 }
