--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,19 @@ exclude = '''
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^3.0.7"
+django-polymorphic = "^2.1.2"
+pydash = "^4.8.0"
+django-localflavor = "^3.0.1"
+djangorestframework = "^3.11.0"
+markdown = "^3.2.2"
+django-filter = "^2.3.0"
+django-rest-polymorphic = "^0.1.9"
+drf-nested-routers = "^0.91"
+django-weasyprint = "^1.0.1"
+django-cors-headers = "^3.4.0"
+gunicorn = "^20.0.4"
+psycopg2-binary = "^2.8.5"
+django-split-settings = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 commitizen = "^1.23.0"
