--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "changelog": "poetry run cz changelog",
     "release": " poetry run cz bump --changelog && git push",
     "build": "yarn lerna exec yarn build",
-    "requirements": "poetry export -f requirements.txt > requirements.txt"
+    "requirements": "poetry export -f requirements.txt > requirements.txt",
+    "docker:build": "docker-compose build",
+    "docker:run": "docker-compose up -d",
+    "docker:migrate": "docker-compose exec app python manage.py migrate",
+    "docker:createsu": "docker-compose exec app python manage.py createsuperuser",
+    "docker:runserver": "docker-compose exec app python manage.py runserver"
   },
   "devDependencies": {
     "lerna": "^3.22.1",
