--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "commit": "poetry run cz c",
     "changelog": "poetry run cz changelog",
     "release": " poetry run cz bump --changelog && git push",
-    "build": "yarn lerna exec yarn build",
+    "build:packages": "yarn lerna exec yarn build",
+    "build:www": "yarn workspace www build",
+    "postbuild:www": "poetry run collectclient",
     "requirements": "poetry export -f requirements.txt > requirements.txt",
+    "makemigrations": "poetry run python manage.py makemigrations",
+    "migrate": "poetry run python manage.py migrate",
     "docker:build": "docker-compose build",
     "docker:run": "docker-compose up -d",
     "docker:migrate": "docker-compose exec app python manage.py migrate",
     "docker:createsu": "docker-compose exec app python manage.py createsuperuser",
-    "docker:runserver": "docker-compose exec app python manage.py runserver"
+    "docker:runserver": "docker-compose exec app python manage.py runserver",
+    "stage": "yarn requirements && yarn build:www"
   },
   "devDependencies": {
     "lerna": "^3.22.1",
