--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,7 @@ black = "^19.10b0"
 flake8 = "^3.8.3"
 flake8-bugbear = "^20.1.4"
 isort = { extras = ["pyproject"], version = "^4.3.21" }
+pre-commit = "^2.5.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
