build(vscode): aggiunge l'estensione yaml

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "editorconfig.editorconfig",
     "bungcip.better-toml",
     "bodil.prettier-toml",
+    "redhat.vscode-yaml",
     "ms-python.python",
     "kevinglasson.cornflakes-linter",
     "esbenp.prettier-vscode",
