--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -29,8 +29,11 @@
     "@craco/craco": "^5.6.4",
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^4.7.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
