--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Un mini gestionale pensato per aiutare a mantenere i conti di un'
 authors = ["Davide Di Criscito <davide.dicriscito@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/dcdeiv/minigest"
-homepage = "https://dcdeiv.github.io/minigest"
+repository = "https://github.com/ctrlmaniac/minigest"
+homepage = "https://ctrlmaniac.github.io/minigest"
 keywords = ["ERP", "django", "gestionale"]
 classifier = [
     "Environment :: Web Environment",
