--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "commit": "poetry run cz c",
     "pre-commit": "poetry run pre-commit run",
     "changelog": "poetry run cz changelog",
-    "release": " poetry run cz bump --changelog && git push",
+    "release": " poetry run cz bump --changelog",
     "build:packages": "yarn lerna exec yarn build",
     "build:www": "yarn workspace www build",
     "postbuild:www": "poetry run collectclient",
