--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ exclude = '''
 [tool.poetry.dependencies]
 python = "^3.8"
 django = "^3.0.8"
+djangorestframework = "^3.11.0"
+markdown = "^3.2.2"
+django-filter = "^2.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
