--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ django = "^3.0.8"
 djangorestframework = "^3.11.0"
 markdown = "^3.2.2"
 django-filter = "^2.3.0"
+drf-nested-routers = "^0.91"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
