--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -3,15 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.6.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build"
   },
   "eslintConfig": {
     "extends": "react-app"
