--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -2,12 +2,6 @@
   "name": "@minigest/www",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
   "scripts": {
     "start": "craco start",
     "build": "craco build"
@@ -26,5 +20,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
+  "devDependencies": {
+    "@craco/craco": "^5.6.4"
   }
 }
