--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -21,5 +21,9 @@
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0"
   }
 }
