--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@minigest/helpers",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Minigest helpers",
   "author": "Davide Di Criscito <davide.dicriscito@gmail.com>",
   "homepage": "https://github.com/ctrlmaniac/minigest",
@@ -23,7 +23,8 @@
     "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/styles": "^4.10.0"
+    "@material-ui/styles": "^4.10.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
