--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -26,5 +26,8 @@
     "@material-ui/styles": "^4.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
+  },
+  "publishConfig": {
+    "directory": "lib"
   }
 }
