--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -22,6 +22,9 @@
     ]
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.10.0",
+    "@minigest/helpers": "workspace:packages/helpers",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
