--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# Environment
-.venv
-
 # Python
+.venv
 *.egg-info
 **/__pycache__
 
@@ -10,3 +8,8 @@
 
 # Node
 node_modules
+packages/**/node_modules
+
+# Build
+packages/**/lib
+packages/**/build
