--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,7 @@
     "@babel/preset-env": "^7.10.4"
   },
   "dependencies": {
-    "@material-ui/styles": "^4.10.0",
+    "@material-ui/core": "^4.11.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
