build(poetry): aggiunge collectclient

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ classifiers = [
   "Topic :: Office/Business"
 ]
 
+[tool.poetry.scripts]
+collectclient = "collectclient:run"
+
 [tool.commitizen]
 name = "cz_conventional_commits"
 version = "0.0.0"
