--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "build": "yarn lerna exec yarn build --ignore=@minigest/docs",
+    "build:docs": "yarn lerna exec yarn build --ignore=@minigest/www",
+    "precollectclient": "yarn run build",
+    "collectclient": "poetry run collectclient",
+    "postcollectclient": "git add minigest && git commit -m 'feat(minigest): aggiorna www'"
+  },
   "devDependencies": {
     "@yarnpkg/pnpify": "^2.1.0",
     "lerna": "^3.22.1"
