--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "craco start",
-    "build": "craco build"
+    "build": "PUBLIC_URL=/static/www craco build"
   },
   "eslintConfig": {
     "extends": "react-app"
