--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@minigest/core": "^0.1.0",
+    "@minigest/ui": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
