--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "python.formatting.provider": "black",
   "editor.formatOnSave": true,
-  "conventionalCommits.scopes": ["root"]
+  "conventionalCommits.scopes": [
+    "docker",
+    "git",
+    "minigest",
+    "python",
+    "root",
+    "ui",
+    "vscode",
+    "webapp",
+    "www"
+  ]
 }
