--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "packages/*"
   ],
   "scripts": {
+    "start:www": "yarn workspace @minigest/www start",
     "build": "yarn lerna exec yarn build --ignore=@minigest/docs",
     "build:docs": "yarn lerna exec yarn build --ignore=@minigest/www",
     "precollectclient": "yarn run build",
