--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,8 @@
     "build": "babel src -d lib --delete-dir-on-start"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0"
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
