--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "@minigest/core": "^0.1.0",
+    "@material-ui/icons": "^4.9.1",
     "@minigest/ui": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
