--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1"
   },
+  "peerDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
