--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "yarn lerna clean --yes",
     "postclean": "yarn install",
     "start:www": "yarn workspace @minigest/www start",
-    "start:www:dev": "yarn lerna exec yarn start --ignore=@minigest/docs",
+    "start:dependencies": "yarn workspace @minigest/ui start",
     "build": "yarn lerna exec yarn build --ignore=@minigest/docs",
     "build:docs": "yarn lerna exec yarn build --ignore=@minigest/www",
     "precollectclient": "yarn run build",
