--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,6 +6,10 @@
   "homepage": "https://github.com/ctrlmaniac/minigest#readme",
   "license": "MIT",
   "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ctrlmaniac/minigest.git",
@@ -16,14 +20,12 @@
   },
   "scripts": {
     "lint": "eslint \"src/**\"",
-    "start": "babel src -d lib --watch",
-    "build": "babel src -d lib --delete-dir-on-start"
+    "build": "rollup -c"
   },
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1"
-  },
+  "dependencies": {},
   "peerDependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -32,11 +34,21 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "babel-eslint": "8",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-react": "^7.20.3",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "rollup": "^2.21.0",
+    "rollup-plugin-peer-deps-external": "^2.2.3"
   },
   "publishConfig": {
     "directory": "lib"
