--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -28,6 +28,7 @@
     "@minigest/ui": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
