--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ djangorestframework = "^3.11.0"
 markdown = "^3.2.2"
 django-filter = "^2.3.0"
 drf-nested-routers = "^0.91"
+django-cors-headers = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
