--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "commit": "poetry run cz c",
     "start": "craco start",
     "build": "PUBLIC_URL=/static/www craco build"
   },
