--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -28,6 +28,7 @@
     "@material-ui/icons": "^4.9.1",
     "@minigest/ui": "^0.1.0",
     "axios": "^0.19.2",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
