build: script minigestlock

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:docs": "yarn lerna exec yarn build --ignore=@minigest/www",
     "precollectclient": "yarn run build",
     "collectclient": "poetry run collectclient",
-    "postcollectclient": "git add minigest && git commit -m \"feat(minigest): aggiorna www\""
+    "postcollectclient": "git add minigest && git commit -m \"feat(minigest): aggiorna www\"",
+    "minigestlock": "poetry export -f requirements.txt > requirements.txt"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.2.0",
