--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "precollectclient": "yarn run build",
     "collectclient": "poetry run collectclient",
     "postcollectclient": "git add minigest && git commit -m \"feat(minigest): aggiorna www\"",
-    "minigestlock": "poetry export -f requirements.txt > requirements.txt"
+    "minigestlock": "poetry export -f requirements.txt > requirements.txt",
+    "postminigestlock": "git add requirements.txt && git -m \"build(minigest): fissa le dipendenze\""
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.2.0",
