build: migliora gli script

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "precollectclient": "yarn run build",
     "collectclient": "poetry run collectclient",
     "postcollectclient": "git add minigest && git commit -m \"feat(minigest): aggiorna www\"",
-    "minigestlock": "poetry export -f requirements.txt > requirements.txt",
-    "postminigestlock": "git add requirements.txt && git commit -m \"build(minigest): fissa le dipendenze\""
+    "minigest:lock": "poetry export -f requirements.txt > requirements.txt",
+    "postminigest:lock": "git add requirements.txt && git commit -m \"build(minigest): fissa le dipendenze\"",
+    "minigest:release": " poetry run cz bump --changelog"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.2.0",
