--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -17,7 +17,7 @@ jobs:
       - name: build docs project
         uses: borales/actions-yarn@v2.0.0
         with:
-          cmd: workspace docs build
+          cmd: run build:docs
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
