--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,7 +29,8 @@
     "@material-ui/icons": "^4.9.1",
     "lodash": "^4.17.19",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-intl": "^5.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -50,6 +51,7 @@
     "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-intl": "^5.3.0",
     "react-router-dom": "^5.2.0",
     "rollup": "^2.21.0",
     "rollup-plugin-peer-deps-external": "^2.2.3"
